crates/ruff/tests/snapshots/analyze_api__analyze_classes.snap
---
source: crates/ruff/tests/analyze_api.rs
info:
  program: ruff
  args:
    - analyze
    - api
    - /var/folders/4z/61xpg3dn54n92mwgk9864ydw0000gn/T/.tmpGOS7YT/mypackage/models.py
---
success: true
exit_code: 0
----- stdout -----
No public API symbols found with external usage.

----- stderr -----
[TEMPDIR]/mypackage/models.py
[TIMESTAMP][ruff::commands::analyze_api][INFO] Using parallel processing for file analysis
[TEMPDIR]/mypackage
