crates/ruff/tests/snapshots/analyze_api__analyze_package@json_format.snap
---
source: crates/ruff/tests/analyze_api.rs
info:
  program: ruff
  args:
    - analyze
    - api
    - /tmp/.tmpCYdYNE/mypackage
    - "--output-format=json"
---
success: true
exit_code: 0
----- stdout -----
{
  "public_api": [],
  "target_path": "[TEMPDIR]/mypackage"
}

----- stderr -----
[TIMESTAMP][ruff::commands::analyze_api][INFO] Analyzing API for: [TEMPDIR]/mypackage
[TIMESTAMP][ruff::commands::analyze_api][INFO] Using parallel processing for file analysis
[TIMESTAMP][ruff::commands::analyze_api][INFO] Using parallel processing for file analysis
[TIMESTAMP][ruff::commands::analyze_api][INFO] Auto-detected project root: [TEMPDIR]/mypackage
