crates/ruff/tests/snapshots/analyze_api__analyze_package@text_format.snap
---
source: crates/ruff/tests/analyze_api.rs
info:
  program: ruff
  args:
    - analyze
    - api
    - /tmp/.tmpg8S6bG/mypackage
---
success: true
exit_code: 0
----- stdout -----
No public API symbols found with external usage.

----- stderr -----
[TIMESTAMP][ruff::commands::analyze_api][INFO] Analyzing API for: [TEMPDIR]/mypackage
[TIMESTAMP][ruff::commands::analyze_api][INFO] Using parallel processing for file analysis
[TIMESTAMP][ruff::commands::analyze_api][INFO] Using parallel processing for file analysis
[TIMESTAMP][ruff::commands::analyze_api][INFO] Auto-detected project root: [TEMPDIR]/mypackage
