crates/ruff/tests/snapshots/analyze_api__analyze_single_module_short@short_flag.snap
---
source: crates/ruff/tests/analyze_api.rs
info:
  program: ruff
  args:
    - analyze
    - api
    - /var/folders/4z/61xpg3dn54n92mwgk9864ydw0000gn/T/.tmpzPTlSB/mypackage/core.py
    - "--short"
---
success: true
exit_code: 0
----- stdout -----
[TEMPDIR]/mypackage/core.py:
  add (1 external usage)
  multiply (1 external usage)

----- stderr -----
[TEMPDIR]/mypackage/core.py
[TIMESTAMP][ruff::commands::analyze_api][INFO] Using parallel processing for file analysis
[TEMPDIR]/mypackage
